--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
     "@notionhq/client": "^5.1.0",
+    "@react-email/render": "^1.3.1",
     "next": "15.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.63.0",
+    "resend": "^6.1.2",
     "zod": "^4.1.11"
   },
   "devDependencies": {
