--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@hookform/resolvers": "^5.2.2",
     "@notionhq/client": "^5.1.0",
     "@react-email/render": "^1.3.1",
+    "@sentry/nextjs": "^10.17.0",
     "next": "15.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
